# dev-box

./: README.md  pyproject.toml
.github/workflows/: black.yml  pylint.yml  tests.yml
iac/: __init__.py  app.py
iac/constructs/: instance_stop_lambda.py  isolated_ec2.py
iac/stacks/: __init__.py  dev_box.py
iac/tests/: test_dev_box.py
lambdas/dev_box_stop/: handler.py
