[project]
name = "dev-box"
version = "0.1.0"
description = "EC2 dev box."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aws-cdk-lib>=2.180.0",
  "boto3>=1.43.17",
  "constructs>=10.4.2",
]

[dependency-groups]
dev = [
  "black>=25.1.0",
  "pylint>=3.3.7",
  "pytest>=8.4.0",
]

[tool.uv]
package = false
